tests/purs/failing/QualifiedErrorsUnificationShadow.out
Error found:
in module [33mMain[0m
at tests/purs/failing/QualifiedErrorsUnificationShadow.purs:9:15 - 9:18 (line 9, column 15 - line 9, column 18)

  Could not match type
  [33m                           [0m
  [33m  Data.List.Lazy.Types.List[0m
  [33m                           [0m
  with type
  [33m                           [0m
  [33m  Data.List.Lazy.Types.List[0m
  [33m                           [0m

while trying to match type [33mList t0[0m
  with type [33mList Unit[0m
while checking that expression [33mnil[0m
  has type [33mList Unit[0m
in value declaration [33mwrongModule[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

